Fixed alignment error for safety and balance section in office page on cat-a-mod2 (#649)

--- a/src/app/pages/office/cat-a-mod2/components/safety-and-balance/safety-and-balance.cat-a-mod2.scss
+++ b/src/app/pages/office/cat-a-mod2/components/safety-and-balance/safety-and-balance.cat-a-mod2.scss
@@ -1,4 +1,7 @@
 :host {
+  .padding-bottom {
+    padding-bottom: 8px;
+  };
   img {
     width: 25px;
     height: 25px;
